<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/bd_color"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/img_vamos"
            android:orientation="horizontal"
            android:scaleType="fitXY"
            android:adjustViewBounds="true" >


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="1dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgYoutube"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="08dp"
                android:layout_weight="1"
                android:padding="16dp"
                android:importantForAccessibility="no"
                app:srcCompat="@drawable/img_youtube" />

            <ImageView
                android:id="@+id/imgFacebook"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="08dp"
                android:layout_weight="1"
                android:padding="16dp"
                android:importantForAccessibility="no"
                app:srcCompat="@drawable/btn_facebook" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="1dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_youtube"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="08dp"
                android:layout_weight="1"
                android:text="@string/btn_youtube"
                android:textStyle="bold"
                android:backgroundTint="#30000000"
                style="?attr/materialButtonOutlinedStyle"
                android:textColor="@color/browser_actions_bg_grey"
                app:cornerRadius="20dp"
                app:strokeColor="#0077FF"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:text="@string/btn_facebook"
                android:textStyle="bold"
                android:backgroundTint="#30000000"
                style="?attr/materialButtonOutlinedStyle"
                android:textColor="@color/browser_actions_bg_grey"
                app:cornerRadius="20dp"
                app:strokeColor="#0077FF"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="1dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_Torre"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:padding="16dp"
                android:importantForAccessibility="no"
                app:srcCompat="@drawable/img_navarra" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_principal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:text="@string/btn_pagina_principal"
                android:textStyle="bold"
                android:backgroundTint="#30000000"
                style="?attr/materialButtonOutlinedStyle"
                android:textColor="@color/browser_actions_bg_grey"
                app:cornerRadius="20dp"
                app:strokeColor="#0077FF"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgAlabanza"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:padding="16dp"
                android:importantForAccessibility="no"
                app:srcCompat="@drawable/img_alabanzas" />

            <ImageView
                android:id="@+id/imgMinistro"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:importantForAccessibility="no"
                android:padding="16dp"
                app:srcCompat="@drawable/img_ministros" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_alabanzas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="08dp"
                android:text="@string/btn_alabanzas"
                android:textStyle="bold"
                android:backgroundTint="#30000000"
                style="?attr/materialButtonOutlinedStyle"
                android:textColor="@color/browser_actions_bg_grey"
                app:cornerRadius="20dp"
                app:strokeColor="#0077FF"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_ministros"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:text="@string/ministro"
                android:textStyle="bold"
                android:backgroundTint="#30000000"
                style="?attr/materialButtonOutlinedStyle"
                android:textColor="@color/browser_actions_bg_grey"
                app:cornerRadius="20dp"
                app:strokeColor="#0077FF"/>
        </LinearLayout>

        <!-- LinearLayout para Instagram -->
        <LinearLayout
            android:id="@+id/linearLayout7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/imgInstagram"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:padding="16dp"
                android:importantForAccessibility="no"
                app:srcCompat="@drawable/img_instagram" />

            <ImageView
                android:id="@+id/img_encuentros"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:padding="16dp"
                android:importantForAccessibility="no"
                app:srcCompat="@drawable/img_encuentros" />
        </LinearLayout>

        <!-- LinearLayout para los botones -->
        <LinearLayout
            android:id="@+id/linearLayout9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_instagram"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="08dp"
                android:backgroundTint="#30000000"
                android:text="@string/btn_instagram"
                style="?attr/materialButtonOutlinedStyle"
                android:textColor="@color/browser_actions_bg_grey"
                app:cornerRadius="20dp"
                android:textStyle="bold"
                app:strokeColor="#0077FF" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_encuentros"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:backgroundTint="#30000000"
                android:text="@string/btn_encuntros"
                style="?attr/materialButtonOutlinedStyle"
                android:textColor="@color/browser_actions_bg_grey"
                app:cornerRadius="20dp"
                android:textStyle="bold"
                app:strokeColor="#0077FF" />
        </LinearLayout>


        <!-- LinearLayout para escuela -->
        <LinearLayout
            android:id="@+id/linearLayout11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/imgEscuela"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:padding="16dp"
                android:importantForAccessibility="no"
                app:srcCompat="@drawable/img_escuela" />

            <ImageView
                android:id="@+id/imgWebTorre"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:padding="16dp"
                android:importantForAccessibility="no"
                app:srcCompat="@drawable/img_logo_amarillo" />
        </LinearLayout>

        <!-- LinearLayout para los botones -->
        <LinearLayout
            android:id="@+id/linearLayout12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp"
            android:gravity="center_vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_escuela"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="08dp"
                android:backgroundTint="#30000000"
                android:text="@string/btn_escuela"
                style="?attr/materialButtonOutlinedStyle"
                android:textColor="@color/browser_actions_bg_grey"
                app:cornerRadius="20dp"
                android:textStyle="bold"
                app:strokeColor="#0077FF" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_webTorre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="08dp"
                android:backgroundTint="#30000000"
                android:text="@string/btn_Torre"
                style="?attr/materialButtonOutlinedStyle"
                android:textColor="@color/browser_actions_bg_grey"
                app:cornerRadius="20dp"
                android:textStyle="bold"
                app:strokeColor="#0077FF" />

        </LinearLayout>

        <!-- LinearLayout Barcelona -->
        <LinearLayout
            android:id="@+id/linearLayout13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/imgWebBarcelona"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:padding="16dp"
                android:importantForAccessibility="no"
                app:srcCompat="@drawable/img_logo_azul" />
        </LinearLayout>

        <!-- LinearLayout para los botones -->
        <LinearLayout
            android:id="@+id/linearLayout14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp"
            android:gravity="center_vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_webTorreBCN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:backgroundTint="#30000000"
                android:text="@string/btn_pagina_principal_bcn"
                style="?attr/materialButtonOutlinedStyle"
                android:textColor="@color/browser_actions_bg_grey"
                app:cornerRadius="30dp"
                android:textStyle="bold"
                app:strokeColor="#0077FF" />
        </LinearLayout>

    </LinearLayout>


</ScrollView>